[package]
# https://github.com/rust-lang/api-guidelines/issues/29 avoid -rs suffix
name = "libtsdb"
version = "0.0.1"
description = "A library for building time series database"
authors = ["at15 <at15@outlook.com>"]
license = "MIT"
repository = "https://github.com/libtsdb/libtsdb-rs"
edition = "2018"

include = [
  "Cargo.toml",
  "LICENSE",
  "src/**/*",
]

[dependencies]
